[workspace]
members = [ "backend", "frontend", "picker-util" ]
resolver = "3"

[workspace.package]
version = "0.1.1"
rust-version = "1.88"
edition = "2024"
authors = ["Marisada Pitakthum <p.marisada@gmail.com>"]
description = "Demo of Thai Date Picker in Rust using Dominator + Axum template"
license = "MIT"
repository = "https://github.com/Marisada/dominator-axum-date-picker"
keywords = []

[workspace.dependencies]

# workspace crate
picker-util = { path = "picker-util" }

# dominator = "0.5"
dominator = { git = "https://github.com/marisada/rust-dominator", rev = "df5fa18a5" }
futures = "0.3"
futures-signals = "0.3"
js-sys = "0.3"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde-wasm-bindgen = "0.6"
time = { version = "0.3", features = [ "macros", "parsing", "serde-human-readable", "wasm-bindgen" ]}
# time-datepicker-core = { git = "https://github.com/marisada/time-datepicker-core", rev = "835117fad" }
time-datepicker-core = { path = "../time-datepicker-core/" }
ulid = { version = "1", features = ["serde"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = [
    "AbortController",
    "AbortSignal",
    "console",
    "DocumentFragment",
    "DomRect",
    "DomRectReadOnly",
    "Element",
    "Headers",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "Request", 
    "RequestInit", 
    "Response", 
    "Storage",
    "SvgAnimationElement",
    "Touch",
    "Url", 
    "Window"
]}

[profile.release]
lto = true
opt-level = 'z'
incremental = false
panic = "abort"
debug = false
codegen-units = 1
strip = true