[package]
name = "picker-util"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = "README.md"

[dependencies]

# from workspace
futures = { workspace = true }
futures-signals = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }

[dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-test = { workspace = true }